drawing: Interrupt attribute runs at graphic characters

Graphic characters are drawn individually and directly, so they should interrupt
a run of cells of the same attributes.

https://bugzilla.gnome.org/show_bug.cgi?id=707221